--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ h1,h2,h3,h4,h5,h6,p {
     margin: 0;
 }
 
+
 /* common */
 
 .container {
@@ -431,6 +432,202 @@ color: #f4f4fd;
         letter-spacing: 0.02em;
         color: #434455;
 }
+/* modal */
+.backdrop {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position:fixed;
+    background-color: rgba(46, 47, 66, 0.4);
+        /* opacity: 0;
+        visibility: hidden;
+        pointer-events: none; */
+    
+
+
+}
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+
+}
+.modal {
+border-radius: 4px;
+width: 408px;
+min-height: 584px;
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+background: #fcfcfc;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+padding: 24px;
+
+
+}
+.icon-modal {
+    fill: #2e2f42;
+  
+}
+.icon-modal:hover,
+.icon-modal:focus {
+fill: #fff;
+}
+.modal-open {
+border-radius: 50%;
+background-color: #E7E9FC;
+width: 24px;
+height: 24px;
+border: 1px solid rgba(0, 0, 0, 0.1);
+position: absolute;
+right: 24px;
+top: 24px;
+cursor: pointer;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-open:hover,
+.modal-open:focus {
+    background-color: #404bbf;
+}
+
+.modal-title {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+padding-top: 48px;
+padding-bottom: 16px;
+}
+.form-label {
+
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: #8e8f99;
+margin-bottom: 4px;
+
+}
+.form-input {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+width: 100%;
+height: 40px;
+padding-left: 38px;
+outline: transparent;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+    border-color: #4D5AE5;
+    background-color: #d9d9d9;
+}
+.form-input:focus + .input-icon{
+    fill: #4D5AE5;
+}
+
+.input-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translate(-50%);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-wrapper {
+    position: relative;
+}
+.modal-field {
+    margin-bottom: 8px;
+}
+.form-textarea {
+    resize: none;
+    height: 120px;
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+padding: 8px 16px;
+outline: transparent;
+    
+}
+.form-textarea::placeholder {
+    font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+
+}
+.form-textarea:focus {
+    border-color: #4D5AE5;
+    
+}
+.modal-submit-button {
+    display: block;
+    margin: 0 auto;
+    width: 169px;
+height: 56px;
+border-radius: 4px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background-color: #4d5ae5;
+border: none;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+cursor: pointer;
+
+
+}
+.checkbox-label {
+    font-weight: 400;
+font-size: 12px;
+line-height: 1.16667;
+letter-spacing: 0.04em;
+color: #8e8f99;
+display: flex;
+align-items: center;
+
+
+}
+
+.checkbox-label span {
+    border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+margin-right: 8px;
+width: 16px;
+height: 16px;
+fill: transparent;
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+.checkbox-field {
+  margin-bottom: 24px;
+  margin-top: 16px;  
+}
+.checkbox-style:checked + .checkbox-label span {
+    fill: #f4f4fd;
+    background-color: #404bbf;
+    border: none;
+}
+.checkbox-label-part {
+    line-height: 1.33333;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: #4d5ae5;
+
+}
+
+
+
 
 /* footer */
 
