--- a/css/styles.css
+++ b/css/styles.css
@@ -439,10 +439,10 @@ color: #f4f4fd;
     top: 0;
     position:fixed;
     background-color: rgba(46, 47, 66, 0.4);
-        opacity: 0;
+         opacity: 0;
         visibility: hidden;
         pointer-events: none; 
-    
+     
 
 
 }
@@ -462,12 +462,14 @@ position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
-padding: 24px;
+padding: 72px 24px 24px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
 .icon-modal {
     fill: #2e2f42;
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .icon-modal:hover,
@@ -484,11 +486,17 @@ position: absolute;
 right: 24px;
 top: 24px;
 cursor: pointer;
+display: flex;
+align-items: center;
+justify-content: center;
 transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 0;
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .modal-open:hover,
 .modal-open:focus {
-    background-color: #404bbf;
+background-color: #404bbf;
+border: none;
 }
 
 .modal-title {
@@ -498,17 +506,19 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-padding-top: 48px;
-padding-bottom: 16px;
+
+margin-bottom: 16px;
 }
 .form-label {
 
 font-weight: 400;
 font-size: 12px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8e8f99;
 margin-bottom: 4px;
+display:block;
+
 
 }
 .form-input {
@@ -519,8 +529,9 @@ border-radius: 4px;
 width: 100%;
 height: 40px;
 padding-left: 38px;
-outline: transparent;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+background-color: transparent; 
+outline:transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
     border-color: #4D5AE5;
@@ -535,7 +546,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-wrapper {
@@ -543,6 +554,9 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-field {
     margin-bottom: 8px;
+}
+.textarea-field {
+    margin-bottom: 16px;
 }
 .form-textarea {
     resize: none;
@@ -552,12 +566,20 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border-radius: 4px;
 padding: 8px 16px;
 outline: transparent;
+background-color: transparent ;
+ font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     
 }
 .form-textarea::placeholder {
     font-weight: 400;
 font-size: 12px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: rgba(46, 47, 66, 0.4);
 
@@ -569,7 +591,7 @@ color: rgba(46, 47, 66, 0.4);
 .modal-submit-button {
     display: block;
     margin: 0 auto;
-    width: 169px;
+    min-width: 169px;
 height: 56px;
 border-radius: 4px;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -582,13 +604,14 @@ letter-spacing: 0.04em;
 text-align: center;
 color: #fff;
 cursor: pointer;
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
 .checkbox-label {
     font-weight: 400;
 font-size: 12px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.04em;
 color: #8e8f99;
 width: 360px;
@@ -598,25 +621,24 @@ align-items: center;
 
 }
 
-.checkbox-label span {
+.checkbox-label .privacy-point {
     border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 margin-right: 8px;
 width: 16px;
 height: 16px;
 fill: transparent;
-display: flex;
+display: inline-flex;
 align-items: center;
 justify-content: center;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
 .checkbox-field {
   margin-bottom: 24px;
-  margin-top: 16px;  
 }
-.checkbox-style:checked + .checkbox-label span {
+.checkbox-style:checked + .checkbox-label .privacy-point {
     fill: #f4f4fd;
     background-color: #404bbf;
     border: none;
@@ -700,6 +722,12 @@ outline: transparent;
 background-color: transparent;
 padding-left: 16px;
 color:#fff;
+ font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+
 }
 .subscr-input::placeholder {
     font-weight: 400;
@@ -711,9 +739,10 @@ color: #fff;
 }
 .footer-button {
     border-radius: 4px;
-width: 165px;
+min-width: 165px;
 height: 40px;
 background-color: #4d5ae5;
+font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -722,7 +751,7 @@ text-align: center;
 color: #fff;
 cursor: pointer;
 display: flex;
-margin-left: 24px;
+justify-content: center;
 align-items: center;
 border:none;
 padding-left: 24px;
@@ -740,11 +769,15 @@ margin-bottom: 16px;
 
 
 }
+
 .footer-form {
     margin-left: 80px;
+
 }
 .subscribtion-form {
     display: flex;
+    gap: 24px;
+    
 }
 .subscr-icon {
     fill: #fff;
