--- a/css/styles.css
+++ b/css/styles.css
@@ -439,9 +439,9 @@ color: #f4f4fd;
     top: 0;
     position:fixed;
     background-color: rgba(46, 47, 66, 0.4);
-         opacity: 0;
+          opacity: 0;
         visibility: hidden;
-        pointer-events: none; 
+        pointer-events: none;  
      
 
 
@@ -463,7 +463,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 padding: 72px 24px 24px;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
 
 }
@@ -476,6 +476,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-modal:focus {
 fill: #fff;
 }
+
 .modal-open {
 border-radius: 50%;
 background-color: #E7E9FC;
@@ -497,8 +498,13 @@ padding: 0;
 .modal-open:focus {
 background-color: #404bbf;
 border: none;
-}
 
+
+}
+.modal-open:hover .icon-modal, 
+.modal-open:focus .icon-modal {
+    fill: #fff;
+}
 .modal-title {
     font-weight: 500;
 font-size: 16px;
@@ -604,7 +610,7 @@ letter-spacing: 0.04em;
 text-align: center;
 color: #fff;
 cursor: pointer;
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -621,7 +627,7 @@ align-items: center;
 
 }
 
-.checkbox-label .privacy-point {
+.privacy-point {
     border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 margin-right: 8px;
