--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,7 @@ color: #f4f4fd;
           opacity: 0;
         visibility: hidden;
         pointer-events: none;  
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
      
 
 
@@ -463,7 +464,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 padding: 72px 24px 24px;
- transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -627,7 +628,7 @@ align-items: center;
 
 }
 
-.privacy-point {
+.checkbox-label .privacy-point {
     border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 margin-right: 8px;
