--- a/css/styles.css
+++ b/css/styles.css
@@ -442,7 +442,7 @@ color: #f4f4fd;
           opacity: 0;
         visibility: hidden;
         pointer-events: none;  
-        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
      
 
 
@@ -623,12 +623,11 @@ letter-spacing: 0.04em;
 color: #8e8f99;
 width: 360px;
 height: 16px;
-display: flex;
-align-items: center;
+
 
 }
 
-.checkbox-label .privacy-point {
+.privacy-point {
     border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 margin-right: 8px;
